Update PopulateDB.java